--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "local": "nodemon index.js"
   },
   "dependencies": {
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
     "nodemon": "^3.1.4"
   }
